@@ -4,6 +4,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* raise the default number of torrents allowed to announce to trackers to 1600
 	* improve uTP slow start behavior
 	* fixed UDP socket error causing it to fail on Win7
 	* update use of boost.system to not use deprecated functions
